packages/envision/src/scss/modal-dialog.scss
.#{$prefix}-modal-dialog {
   bottom: 0;
   display: none;
   left: 0;
   opacity: 0;
   outline: 0;
   overflow: hidden;
   overflow-x: hidden;
   overflow-y: auto;
   position: fixed;
   right: 0;
   top: 0;
   transition: opacity 0.3s linear;
   z-index: $zindex-modal;

   &--show {
      display: block;
      opacity: 1;
   }

   &__dialog {
      word-wrap: break-word;
      overflow-wrap: anywhere;
      word-break: normal;

      @media (min-width: 768px) {
         margin: 10% auto;
         max-width: css-var("modal-medium-width");
      }
      position: relative;

      &--large {
         @media (min-width: 768px) {
            margin: 10% auto;
            max-width: css-var("modal-large-width");
         }
      }

      &--small {
         @media (min-width: 768px) {
            margin: 10% auto;
            max-width: css-var("modal-small-width");
         }
      }
   }

   &__content {
      background-clip: padding-box;
      background-color: css-var("element-background-color");
      border: $border-width $border-style css-var("border-color");
      border-radius: css-var("border-radius-medium");
      box-shadow: css-var("modal-dialog-box-shadow");
      outline: 0;
      position: relative;
   }

   &__header {
      border-radius: css-var("border-radius-medium") css-var("border-radius-medium") 0 0;
      border-bottom: $border-width $border-style css-var("border-color-light");
      display: block;
      padding: css-var("spacing-xx-small") css-var("spacing-x-small");

      &__title {
         margin-bottom: 0 !important;
         padding: css-var("spacing-xx-small");
      }
   }

   &__backdrop {
      @include backdrop();

      &--in {
         @include backdrop-in();
      }
   }

   &__body {
      padding: css-var("spacing-x-small") css-var("spacing-small");
   }

   &__footer {
      border-radius: 0 0 css-var("border-radius-medium") css-var("border-radius-medium");
      border-top: $border-width $border-style css-var("border-color-light");
      padding: css-var("spacing-small");
      text-align: left;

      &--right {
         text-align: right;
      }
   }
}

@keyframes #{$prefix}-fade {
   from {
      opacity: 0;
   }
   to {
      opacity: 0.5;
   }
}

